--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -26,6 +26,7 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation project(':StealthLib')
     implementation "com.acmerobotics.roadrunner:ftc:0.1.12"
     implementation "com.acmerobotics.roadrunner:core:1.0.0"
     implementation "com.acmerobotics.roadrunner:actions:1.0.0"
