--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'org.ftclib.ftclib:core:2.1.1'
     // the following is optional if you want vision
     implementation 'org.ftclib.ftclib:vision:2.1.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.21'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
 
